# blackpill-kbd

./: .gitmodules  CMakeLists.txt  README.md  STM32F401CCUX_FLASH_app1.ld  STM32F401CCUX_FLASH_app2.ld  STM32F401CCUX_FLASH_boot.ld  blackpill-kbd.ioc
Core/Src/: main.c
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
USB_DEVICE/Class/HID/Inc/: usbd_hid.h
USB_DEVICE/Class/HID/Src/: usbd_hid.c
app/: main.c  stm32f4xx_it.c  stm32f4xx_it.h
boot/: main.c  stm32f4xx_hal_conf.h
common/: system_stm32f4xx.c
lib/usb/App/: usb_device.c  usb_device.h
